fixed logo + menu spacing for largest breakpoint

--- a/engage/engage_style.css
+++ b/engage/engage_style.css
@@ -14,14 +14,16 @@ html, body {
 
 .top-section {
     float: right;
-    padding-top: 4%;
+    padding-top: 0%;
     padding-left: 0;
     width: 88%;
 }
 
 .logo {
-    display: inline;
-    padding: 5% 0 0 3%;
+    display: absolute;
+    width: 10%;
+    padding: 1em 0 0% 1em;
+    margin: 0% 0% 0% 0%;
 }
 
 .topnav {
@@ -354,7 +356,6 @@ div.footer {
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 1.5) and (min-width: 1200px), screen and (min-resolution: 144dpi) and (min-width: 1200px) {
-    
     html, body {
         font-family: 'Source Sans Pro', sans-serif;
         min-height: 100%;
@@ -366,67 +367,203 @@ div.footer {
         position: relative;
         background-color: #b1effe;
     }
-
-/* Web Dropdown Menu */
-.menu-links {
-    padding-top: 5%;
-    padding-left: 50%;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 25px;
-    font-weight: bold;
-    display: block;
-    text-align: left;
-    word-spacing: 1.2em;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-a:hover {
-    color: #c8c5fc;
-}
-
-.dropdown {
-    display: inline-block;
-    position: relative;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 100px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    padding: 1.2% 1.6%;
-    z-index: 1;
-    word-spacing: normal;
-}
-
-.dropdown-content span {
-    color: black;
-    padding: 10px 14px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    font-size: 16px;
-}
-
-.dropdown-content span:hover {
-    color: white;
-    background-color: rgb(161, 161, 161);
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-
+    
+    .top-section {
+        float: right;
+        padding-top: 4%;
+        padding-left: 0;
+        width: 88%;
+    }
+    
+    .logo {
+        display: inline;
+        padding: 5% 0 0 3%;
+    }
+    
+    .topnav {
+        display: none;
+    }
     
     .mobile {
         display: none;
     }
+    
+    .menu-links {
+        padding: 5% 0 0 45%;
+        font-family: 'Source Sans Pro', sans-serif;
+        font-size: 25px;
+        font-weight: bold;
+        display: block;
+        text-align: left;
+        word-spacing: 1.2em;
+    }
+    
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    a:hover {
+        color: #c8c5fc;
+    }
+    
+    .dropdown {
+        display: inline-block;
+        position: relative;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 100px;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        padding: 1.2% 1.6%;
+        z-index: 1;
+        word-spacing: normal;
+    }
+    
+    .dropdown-content span {
+        color: black;
+        padding: 10px 14px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+        font-size: 16px;
+    }
+    
+    .dropdown-content span:hover {
+        color: white;
+        background-color: rgb(161, 161, 161);
+    }
+    
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    
+    
+        
+        .mobile {
+            display: none;
+        }
+        
+        .underline {
+            background-color: #00d5fb;
+            padding: 0;
+            width: 20%;
+            border: none;
+            height: 5px;
+        }
+    
+        .big-underline {
+            background-color: #00d5fb;
+            padding: 0;
+            text-align: right;
+            width: 87%;
+            border: none;
+            height: 5px;
+        }
+        
+        .row1 {
+            display: flex;
+        }
+        
+        .column-header {
+            margin-block-end: 0;
+        }
+        
+        .join-us {
+            margin: 1em;
+        }
+        
+        .create-an-account {
+            margin: 1em;
+            min-width: 64%;
+        }
+        
+        .img1 {
+            width: 100%;
+            padding: 0;
+        }
+        
+        .img2 {
+            width: 100%;
+        }
+        
+        .row2 {
+            display: flex;
+        }
+        
+        .propose-a-network {
+            margin: 1em;
+            flex-basis: 33%;
+        }
+        
+        .propose-a-network .caption {
+            padding-bottom: 10%;
+        }
+        
+        .img3 {
+            width: 100%;
+        }
+        
+        .network-editor {
+            margin: 1em;
+            flex-basis: 33%;
+        }
+        
+        .img4 {
+            width: 100%;
+        }
+        
+        .advisory-board  {
+            margin: 1em;
+            flex-basis: 33%;
+        }
+        
+        .img5 {
+            width: 100%;
+        }
+        
+        .go-home-container {
+            text-align: center;
+            margin: 2em;
+        }
+        
+        .go-home {
+            font-size: 1.3em;
+            background-color: white;
+            padding: .5em;
+            box-shadow: 3px 5px #888888;
+            border-radius: .5em;
+        }
+        
+        .go-home:link {
+            color: rgb(51, 51, 51); 
+        }
+        
+        .go-home:visited {
+            color: rgb(51, 51, 51); 
+        }
+        
+        .go-home:hover {
+            color: rgb(51, 51, 51);
+        }
+        
+        a:link {
+            color: black;
+            text-decoration: none;
+        }
+        
+        a:visited {
+            color: black;
+            text-decoration: none;
+        }
+        
+        a:hover {
+            color: black;
+            text-decoration: none;
+        }    
     
     .underline {
         background-color: #00d5fb;
@@ -535,12 +672,12 @@ a:hover {
     a:hover {
         color: black;
         text-decoration: none;
-    }    
+    }   
+    
     
     .footer-container {
-        height: 30%;
+        height: 200px;
         margin: 0;
-        position: absolute;
         padding: 0;
         width: 100%;
         overflow: hidden;
@@ -570,7 +707,7 @@ a:hover {
         padding: 4% 0;
     }
     
-    }
+    }    
 
 @media screen and (min-width: 1000px) and (max-width: 1200px) {
 html, body {
